# tcp-chat-simple-encryption

./: LICENSE  encryption.hpp
client/: main.cpp
server/: CMakeLists.txt  main.cpp  test.cpp
